--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -11,6 +11,8 @@
 @import "layouts/footer";
 
 // Components
+@import "components/form";
 @import "components/owl";
 @import "components/button";
+@import "components/magnific";
 
