--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -11,6 +11,7 @@
 @import "layouts/footer";
 
 // Components
+@import "components/faq";
 @import "components/form";
 @import "components/owl";
 @import "components/button";
