FUNCTION: switched off autoscroll + commented out animation for active states

--- a/src/style/components/_owl.scss
+++ b/src/style/components/_owl.scss
@@ -228,9 +228,26 @@ $dot-background-active: $color-base !default;
 
 //dot-data sliders
 #hero-slider, .js-tiptopSlider {
-    &.owl-theme .owl-dots {
+    &.owl-theme .owl-nav {
+        border: 1px solid red;
+        z-index: 1000;
+        background-color: green;
         position: absolute;
-        bottom: $spacer*4;
+        width: 100%;
+        bottom: $spacer*4.5;
+        padding: 0 $spacer/2;
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        @include media-breakpoint-up(md) {
+            bottom: 50%;
+            padding: 0 $spacer*2;
+        }
+    }
+    &.owl-theme .owl-dots {
+        z-index: 1001;
+        position: absolute;
+        bottom: $spacer*4.5;
         left: 0;
         right: 0;
         @extend .container;
@@ -252,15 +269,19 @@ $dot-background-active: $color-base !default;
             position: relative;
         }
 
-        &.owl-theme .owl-dot.active.animate:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            width: 0;
-            border-bottom: solid 2px white;
-            animation: border_anim 9s linear forwards;
+        &.owl-theme .owl-dot.active {
+            border-bottom: 2px solid rgba(white, 1);
         }
+
+        //&.owl-theme .owl-dot.active.animate:before {
+        //    content: '';
+        //    position: absolute;
+        //    left: 0;
+        //    bottom: -2px;
+        //    width: 0;
+        //    border-bottom: solid 2px white;
+        //    animation: border_anim 9s linear forwards;
+        //}
 
     }
 }
@@ -294,20 +315,24 @@ $dot-background-active: $color-base !default;
             margin-bottom: 0;
         }
 
-        &.active.animate:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            width: 0;
-            border-bottom: solid 2px #374377;
-            @include media-breakpoint-down(md) {
-                width: 100%;
-            }
-            @include media-breakpoint-up(md) {
-                animation: border_anim 11s linear forwards;
-            }
+        &.active {
+
         }
+
+        //&.active.animate:before {
+        //    content: '';
+        //    position: absolute;
+        //    left: 0;
+        //    bottom: -2px;
+        //    width: 0;
+        //    border-bottom: solid 2px #374377;
+        //    @include media-breakpoint-down(md) {
+        //        width: 100%;
+        //    }
+        //    @include media-breakpoint-up(md) {
+        //        animation: border_anim 11s linear forwards;
+        //    }
+        //}
 
     }
 }
